--- a/CHANGES
+++ b/CHANGES
@@ -9,7 +9,7 @@ http://svn.collab.net/repos/svn/tags/1.3.0
     * 'svn blame' speedup on files with long history (issue #1970)
     * 'svnversion' now assumes default argument of '.' (r14892)
     * support for neon 0.25.x, which fixes http:// control-c bug (issue #2297)
-    * support for ISO-8601 date formats (r14428)
+    * support for more ISO-8601 date formats, compatible with GNU date (r14428)
     * support for single-digit date components (r15459)
     * on Windows, '_svn' admin dir now toggled by runtime env. variable (r16244)
     * working copy size with empty propfiles reduced (r16855, see releasenotes)
@@ -42,7 +42,7 @@ http://svn.collab.net/repos/svn/tags/1.3.0
     * fixed: conflict markers not in current encoding (r14621)
     * fixed: commands ignoring extraneous -m or -F switches (issue #2285)
     * fixed: poor error-checking when using revprops (r15542)
-    * fixed: non-interruptible OSX socket connection with svn:// (r15909)
+    * fixed: non-interruptible OS X socket connection with svn:// (r15909)
     * fixed: stack-smashing bugs (r15948, r16037)
     * translation updates for all languages
 
@@ -93,7 +93,7 @@ Developer-visible-changes:
 * javahl bindings:
     - add streamy API for fetching file contents (r15584) 
     - fixed: let tests run before bindings are installed (issue #2040)
-    - fixed: lock command not raising errors propertly (issue #2394)
+    - fixed: lock command not raising errors properly (issue #2394)
     - fixed: ignored errors from svn_client_blame2() (r16434)
 
 
