--- a/TODO
+++ b/TODO
@@ -6,7 +6,7 @@ See <http://svn.haxx.se/dev/archive-2005-07/1380.shtml> for more information.
 * Keep track of whether props are modified or not in the entries file.
 
 * Make sure there is no props file if no props are modified and no prop-base
-  if there are no props at all..
+  if there are no props at all.
 
 * Use the above in the modification detection code for props.
 
@@ -17,3 +17,4 @@ See <http://svn.haxx.se/dev/archive-2005-07/1380.shtml> for more information.
 * Consider caching presence of other props.
 
 * Implement WC format upgrading for the new format.
+  (Reconsider if we need another WC format bump.)
