Import more features of the svnbook DocBook buildsystem into the svn misc-docs buildsystem - specifically:  - Include revision of source in output.  - HTML chunked output.  - 'svn-' prefix on main generated file names.
* doc/HOWTO.DocBook: Update filenames.
* doc/misc-docs/misc-docs.xml: Include the revision number.
* doc/Makefile: Main changes mentioned above.


git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@857185 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/HOWTO.DocBook
+++ b/doc/HOWTO.DocBook
@@ -70,12 +70,12 @@ II. COMPILING THE DOCS
      If you don't want to compile libxslt, you can just fetch the
      appropriate OS binary package.  
 
-   * From the book directory, do 
+   * From the this directory, do 
 
-        $ make all-html
+        $ make misc-docs-html
 
      This produces an HTML version for the Subversion DocBook docs in
-     misc-docs/misc-docs.html.
+     misc-docs/svn-misc-docs.html.
 
          
 3. Make a PDF file.
@@ -136,10 +136,10 @@ II. COMPILING THE DOCS
 
    * From this directory, do
 
-        $ make all-pdf
+        $ make misc-docs-pdf
 
      This produces PDF for the Subversion DocBook documents in
-     misc-docs/misc-docs.pdf.
+     misc-docs/svn-misc-docs.pdf.
 
 
 III. HACKING ON THE DOCS
