* doc/HOWTO.DocBook: Typo fix.
git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@857187 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/HOWTO.DocBook
+++ b/doc/HOWTO.DocBook
@@ -70,7 +70,7 @@ II. COMPILING THE DOCS
      If you don't want to compile libxslt, you can just fetch the
      appropriate OS binary package.  
 
-   * From the this directory, do 
+   * From this directory, do
 
         $ make misc-docs-html
 
