* /branches/wc-propcaching/TODO: Update, assign some tasks to people   actually working on them.  Remove done part of task.
git-svn-id: https://svn.apache.org/repos/asf/subversion/branches/wc-propcaching@857373 13f79535-47bb-0310-9956-ffa450edef68

--- a/TODO
+++ b/TODO
@@ -3,15 +3,18 @@ libsvn_wc performance for some operations.  Below are the items to be done
 during the lifetime of this branch.
 See <http://svn.haxx.se/dev/archive-2005-07/1380.shtml> for more information.
 
-* Get rid of props-time filed in entries file; resolve failing test
-  stat_tests.py 13: timestamp behaviour.
+* Get rid of props-time field in entries file. (lundblad)
 
 * Make sure there is no props file if no props are modified and no prop-base
-  if there are no props at all.
+  if there are no props at all. (lundblad)
 
-* Cache presence of svn:special and svn:needs-lock in entries file.
+* Make sure prop-mods flag work on copy (write test for it) after the
+  install_file patch has been committed and merged from trunk. (lundblad)
 
-* Shortcut svn_wc_prop_get for the cached props.
+* Cache presence of svn:special, and svn:needs-lock and svn:externals
+  in entries file. (dberlin)
+
+* Shortcut svn_wc_prop_get for the cached props. (dberlin)
 
 * Consider caching presence of other props.
 
@@ -20,5 +23,5 @@ See <http://svn.haxx.se/dev/archive-2005-07/1380.shtml> for more information.
 
 * Consider keeping track of baseprops existence in entries file.
 
-* Consier storing baseprops (and maybe working props) in a single file
+* Consider storing baseprops (and maybe working props) in a single file
   per directory.
