--- a/TODO
+++ b/TODO
@@ -8,8 +8,6 @@ See <http://svn.haxx.se/dev/archive-2005-07/1380.shtml> for more information.
 
 * Consider caching presence of other props.
 
-* Implement WC format upgrading for the new format.
-
 * Require MD5 checksums on entries and include this in the WC format
   bump. (dionisos)
   NOTE: Done on this branch to avoid another wc format bump on trunk.
@@ -18,11 +16,8 @@ See <http://svn.haxx.se/dev/archive-2005-07/1380.shtml> for more information.
   Would mean for an enough recent WC: has_props == NULL -> no props,
   has_props == "" -> properties exists but none that are cached
   has_props is some other string -> there are props and some cached.
-  svn_wc_status needs to know this, so we can avoiding stating each props
+  svn_wc_status needs to know this, so we can avoid stating each props
   file.
 
 * Consider storing baseprops (and maybe working props) in a single file
   per directory.
-
-* Investigate the use of svn_wc__has_props in the status code.
-
