--- a/INSTALL
+++ b/INSTALL
@@ -328,31 +328,14 @@ I.    BUILD REQUIREMENTS
       The Windows build scripts will compile the ZLib sources.
 
 
-      11. Building The Documentation
+      11. Documentation
 
-      The master source format for Subversion's documentation is
-      Docbook Lite.  See doc/book/README for instructions how to
-      compile the book into a useful format.
-
-      The preferred documentation source format used to be Texinfo. We are
-      in the process of migrating all texinfo files to DocBook Lite. The
-      online documentation for texinfo is at
-
-      http://www.gnu.org/manual/texinfo-4.0/html_chapter/texinfo_toc.html
-
-      Depending on exactly which doc targets you make, you'll need one
-      or more of:
-
-         * the `makeinfo' program from the latest texinfo package in
-           ftp://ftp.gnu.org/pub/gnu/texinfo/
-
-         * the `texi2dvi' or `texi2html' programs
-
-         * the `dvipdf' script from Ghostscript (pipes dvi | ps |
-                                                 Ghostscript)
-
-      If `makeinfo' is not installed before `configure' is run, then
-      the documentation which requires it will not be created and installed.
+      The primary documentation for Subversion is the free book
+      "Version Control with Subversion", a.k.a. "The Subversion Book",
+      obtainable from http://svnbook.red-bean.com/.
+      
+      Various additional documentation exists in the doc/ subdirectory of
+      the Subversion source.  See the file doc/README for more information.
 
 
 
