--- a/INSTALL
+++ b/INSTALL
@@ -146,27 +146,40 @@ I.    BUILD REQUIREMENTS
       want to use Subversion to connect to a server over ra_dav (via a
       http:// or https:// url), you will require Neon.
 
-      The Neon library source code can be installed in "./neon" if you
-      want Subversion to build it as part of the Subversion build process.
-      The source code is included with the latest Subversion tarball, and it
-      can also be obtained from:
+      The source code is included with the latest Subversion tarball,
+      and it can also be obtained from:
 
           http://www.webdav.org/neon/neon-0.24.7.tar.gz
             -or-
           http://www.webdav.org/neon/neon-0.25.3.tar.gz
 
-      Unpack the archive using tar/gunzip and rename the resulting
-      directory from ./neon-0.XX.Y to just "./neon".
+      Building Neon inside the subversion build:
 
-      Without source code, a previously compiled library can be picked up
-      from the standard locations. If you want to specify a nonstandard
-      location, you need to use the LDFLAGS environment variable when
-      you run "./configure". You may also have to specify where the
-      neon-config script (which identifies various features of the Neon
-      library) is kept by giving the "--with-neon=" option to
-      "./configure". Note that the script should be kept in a "bin"
-      subdirectory beneath wherever "--with-neon" is pointed.
+      The Neon library source code can be installed in "./neon" if you
+      want Subversion to build it as part of the Subversion build process.
 
+      Unpack the archive using tar/gunzip.  Rename the resulting
+      directory from ./neon-0.XX.Y to just "./neon", inside the top
+      level of your Subversion source tree.
+
+      Using Neon as an external library:
+
+      We recommend that you keep the neon installation out of the
+      Subversion working copy.  This is because most developers have
+      multiple working copies of Subversion, and it is easier to use a
+      single instance of the Neon library for all instances.  To do
+      this, just unzip/untar Neon, and build and install it according
+      to its own standard installation instructions.  Then follow the
+      steps below to use the installed Neon when building 
+
+      Subversion's configuration mechanism should auto-detect the
+      installed Neon.  If it does not, you may need to set the LDFLAGS
+      environment variable when you run "./configure", or specify
+      Neon's location by passing the "--with-neon=" option to
+      "./configure".  Look for the "neon-config" script in a "bin/"
+      subdirectory of the target of "--with-neon".  For example, if
+      you pass "--with-neon=/usr/local/myneon/", then there should be
+      a file "/usr/local/myneon/bin/neon-config".
 
       5.  Berkeley DB 4.X
 
