* subversion/libsvn_wc/README: Follow up to r17588 with minor typo   fixes, opportunistic de-abbreviations, line-break adjustments,   consistifications, and expanded explanations.  No code changes.
git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@857676 13f79535-47bb-0310-9956-ffa450edef68

--- a/subversion/libsvn_wc/README
+++ b/subversion/libsvn_wc/README
@@ -79,29 +79,27 @@ analogous to CVS/ subdirs:
 
   .svn/format                   /* Contains wc adm format version. */
        entries                  /* Various adm info for each directory entry */
-       dir-props                /* Optional, Working properties for this
+       dir-props                /* Optional, working properties for this
                                    directory */
        dir-prop-base            /* Optional, pristine properties for this
                                    directory */
        dir-prop-revert          /* Optional, dir base-props, used when
                                    reverting. */
        lock                     /* Optional, tells others this dir is busy */
-       log                      /* Optional, ops log (for rollback
+       log                      /* Optional, operations log (for rollback
                                    crash-recovery) */
        log.N                    /* Optional, additional ops logs (N is
                                    an integer >= 1.) */
        text-base/               /* Pristine repos revisions of the files... */
-            foo.c.svn-base
-            foo.c.svn-revert    /* Optional, text-base used when
-                                   reverting. */
+            foo.c.svn-base      /* Mandatory, repos revision of foo.c. */
+            foo.c.svn-revert    /* Optional, text-base used when reverting. */
        props/                   /* Working properties for files in this dir */
-            foo.c.svn-work         /* Optional, Stores foo.c's working
+            foo.c.svn-work         /* Optional, stores foo.c's working
                                       properties */
        prop-base/               /* Pristine properties for files in this dir */
             foo.c.svn-base         /* Optional, stores foo.c's
                                       pristine properties */
-            foo.c.svn-revert       /* Optional, text base when
-                                      reverting. */
+            foo.c.svn-revert       /* Optional, text base when reverting. */
        wcprops/                 /* Special 'wc' props for files in
                                    this dir, if any. */
             foo.c.svn-work          /* Optional. */
@@ -111,7 +109,8 @@ analogous to CVS/ subdirs:
             text-base/             /* tmp area for base files */
             prop-base/             /* tmp area for base props */
             props/                 /* tmp area for props */
-       empty-file               /* An empty file, for convenience, not used. */
+       empty-file               /* Obsolete, no longer used, not present in
+                                   post-1.3 working copies. */
 
 `format'
 
@@ -157,12 +156,13 @@ analogous to CVS/ subdirs:
 
    These files (XML fragments) hold a log of actions that are about to be
    done, or are in the process of being done.  Each action is of the
-   sort that, given a log entry for it, one can tell unambiguously
-   whether or not the action was successfully done.  Thus, in
-   recovering from a crash or an interrupt, the wc library reads over
-   the log file, ignoring those actions that have already been done,
-   and doing the ones that have not.  When all the actions in log have
-   been done, the log files are removed.
+   sort that, given a log entry for it, either it is okay to do the
+   action again (i.e., the action is idempotent), or else one can tell
+   unambiguously whether or not the action was successfully done.
+   Thus, in recovering from a crash or an interrupt, the wc library
+   reads over the log file, ignoring those actions that have already
+   been done, and doing the ones that have not.  When all the actions
+   in log have been done, the log files are removed.
 
    Some operations produce more than one log file.  The first log file
    is named `log', the next `log.1' and so on.  Processing the log
@@ -323,50 +323,53 @@ The entries file
 
 The entries file contains an XML document with a top-level element
 named `wc-entries'.  This element contains one or more `entries'
-elements, one for each directory entry.  The first `entry' element is
-the this dir entry with values for the directory containing this admin
-area.
+elements, one for each directory entry.  The `entry' element whose
+name attribute is the empty string is the entry for this directory,
+that is, the directory containing this administrative area.  This is
+known the "this_dir" entry.
 
-The `entry' element is empty and has the attributes described below.
+All `entry' elements are empty, and can have the attributes described
+below.
 
-an attribute may be boolean, in which case it can have one of the
+An attribute may be boolean, in which case it can have one of the
 values `true' or `false'.  Boolean attributes default to `false' if
-not present.  Tiestamps are stored in the format produced by
+not present.  Timestamps are stored in the format produced by
 svn_time_to_cstring().
 
 `name':
-   The basename of this entry; the empty string for the this dir
+   The basename of this entry, or the empty string for the this_dir
    entry.  Required for all entries.
 
 `revision':
    The revision that the pristine text and properties of this entry
-   represent.
-   Defaults to the revision of the this dir entry, for which it is
-   required.  Set to 0 for entries not yet in the repository.
+   represent.  Defaults to the revision of the this_dir entry, for
+   which it is required.  Set to 0 for entries not yet in the
+   repository.
 
 `url':
-   The URL of the corresponding entry in the repository.  Defaults to
-   the URL of the this dir entry with the URI-encoded basename of this
-   entry appended as a path segment.  Required for the this dir entry.
+   The URL of the corresponding entry in the repository.  Required for
+   the this_dir entry; for all other entries, the default is to append
+   the URI-encoded entry name to the the URL of the this_dir entry, as
+   a path segment.
 
 `repos':
    The prefix of the URL which represents the repository root of this
-   entry.  Defaults to the repository root of the this dir entry.
-   Optional for the this dir entry, for compatibility.
+   entry.  Defaults to the repository root of the this_dir entry.
+   Optional for the this_dir entry, for compatibility.
 
 `kind':
    The kind of this entry: `file' or `dir'.  Required for all entries. 
 
 `text-time':
    For file entries, the timestamp of the working file when it was
-   last known to be identical to the text base file.  No default; optional.
+   last known to be identical to the text base file.  Optional, no default.
 
 `prop-time':
-   Not used anymore.  In format 5 and earlier this was similar to
-   `text-time', but for the working props file.
+   Obsolete.  In format 5 and earlier this was similar to `text-time',
+   but for the working props file.
 
 `checksum':
-   For file entries, base-64 encoded MD5 checksum of the text-base
+   For file entries, base-64-encoded MD5 checksum of the text-base
    file.  Optional, for backwards compatibility.
 
 `schedule':
@@ -380,8 +383,15 @@ svn_time_to_cstring().
 
 `deleted':
    A boolean: true if this entry is deleted in its revision but exists
-   in its parent's revision.  (### Add a sentence explaining why
-   this is necessary.)
+   in its parent's revision.  This is necessary because updates are
+   not atomic: different bits of a working copy can be updated to
+   different revisions at different times, and it's possible that
+   this entry may be updated to a more recent revision (R) than its
+   parent's revision (P).  If this entry is deleted in R, and the
+   parent is trying to report its own state (based on P) to the
+   repository, the parent cannot simply claim to be at P; the parent
+   must also indicate that this particular entry is deleted because it
+   is at R.
 
 `absent':
    A boolean: true if is an entry by this name in the repository but
@@ -389,16 +399,15 @@ svn_time_to_cstring().
 
 `copyfrom-url':
    If this entry is added with history, the URL of the copy source.
-   May be present iff `copyfrom-rev' is present.
+   Present iff `copyfrom-rev' is present.
 
 `copyfrom-rev':
    If this entry is added with history, the revision of the copy
-   source.  May be present iff `copyfrom-url' is present.
+   source.  Present iff `copyfrom-url' is present.
 
 `conflict-old', `conflict-new' and `conflict-wrk':
    In case of a text conflict, these three attributes specify the relative
-   filenames of the three saved conflict files.  No defaults;
-   optional.
+   filenames of the three saved conflict files.  Optional, no defaults.
 
 `prop-reject-file':
    In case of a property conflict, this specifies the relative
@@ -406,40 +415,41 @@ svn_time_to_cstring().
 
 `committed-rev':
    The last committed revision for this entry if this entry is in the
-   repository.  NO default; optional.
+   repository.  Optional, no default.
 
 `committed-date':
-   The date of the `committed-rev' if available.  No default;
-   optional.
+   The date of the `committed-rev' if available.  Optional, no default.
 
 `last-author':
-   The author of the `committed-rev' if available.  No default;
-   optional.
+   The author of the `committed-rev' if available.  Optional, no default.
 
 `uuid':
    The repository UUID of this entry.  Defaults to the UUID of the
-   this dir entry.  Optional for the this dir entry, for backwards
-   compatibility.
+   this_dir entry.  Optional, even for the this_dir entry, for
+   backwards compatibility.
 
 `incomplete':
    A boolean: true if this entries file is not complete yet.  Used
-   when updating.  This is only allowed on the this dir entry.  (###
-   Explain this in more detail.)
+   when updating.  This is only allowed on the this_dir entry; it
+   allows update operations to be non-atomic, by marking the directory
+   as still in the process of being updated.  If this update is
+   interrupted for some reason, a later update will see that this
+   directory is incomplete and Do The Right Thing.
 
 `lock-token':
-   The lock token URL if this entry is locked in the repository.  No
-   default; optional.
+   The lock token URL if this entry is locked in the repository.
+   Optional, no default.
 
 `lock-owner':
-   The lock owner, iff there is a lock token.  No default; optional.
+   The lock owner, iff there is a lock token.  Optional, no default.
 
 `lock-comment':
    The lock comment iff there is a lock token and the lock has a
-   comment.  No default; optional.
+   comment.  Optional, no default.
 
 `lock-creation-date':
-   The lock creation date iff there is a lock token.  No default;
-   optional.
+   The lock creation date iff there is a lock token.  Optional, no
+   default.
 
 `has-props':
    A boolean: for format 6 and later, true if there are any working
@@ -452,7 +462,7 @@ svn_time_to_cstring().
 `cachable-props':
    For format 6 and later, a space-separated list of property names
    whose presence is cached in `present-props'.  Defaults to the value
-   of the this dir entry.  For the this dir entry, defaults to the
+   of the this_dir entry.  For the this_dir entry, defaults to the
    empty list.
 
 `present-props':
@@ -464,9 +474,9 @@ svn_time_to_cstring().
    list.
 
 The only attributes allowed in an entry for a directory (other than
-the this dir entry) are `name', `absent', `deleted', `schedule', `copied',
+the this_dir entry) are `name', `absent', `deleted', `schedule', `copied',
 `copyfrom-url', `copyfrom-rev'.  The other attributes are only stored in
-the this dir entry for the directory in question.
+the this_dir entry for the directory in question.
 
 
 Property storage
@@ -479,11 +489,11 @@ stored directly under .svn in .svn/dir-prop-base and .svn/dir-props,
 respectively.  Property files are in the hashdump format produced by
 svn_hash_write().  If the file contains no properties, it is either
 empty or contains just the "END\n" delimiter.  The way properties are
-stored changed in format 6; the current way is described first.
+stored changed in format 6; that way is described first.
 
 In format 6 and later, the base-props file is present only if there
 are any base properties.  The working props file is present only if
-the entry has property modifications (i.e. it's `has-prop-mods'
+the entry has property modifications (i.e. its `has-prop-mods'
 attribute is true).  Note that an existing, but empty working props
 file means that there are property modifications, but no working
 properties.
