* subversion/libsvn_wc/README   (dir-prop-revert): Follow up to r17602 with a clarification.
Review by: lundblad
(But responsibility for the new text is mine; his approval was tentative.)


git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@857680 13f79535-47bb-0310-9956-ffa450edef68

--- a/subversion/libsvn_wc/README
+++ b/subversion/libsvn_wc/README
@@ -143,9 +143,10 @@ analogous to CVS/ subdirs:
    directory's properties live here. 
 
 `dir-prop-revert':
-   This is the base-props for this directory for the deleted directory
-   in a schedule replace situation.  If this file doesn't exist, the
-   `dir-prop-base' file is used. 
+   In a schedule-replace situation for this directory, this holds the
+   base-props for the deleted version of the directory (i.e., the
+   version that is being replaced).  If this file doesn't exist, the
+   `dir-prop-base' file is used.
 
 `lock'
 
