The biggest functional changes are working copy cleaning and an option to turn off shared/static testing.  Also added port option for svnserve.
* tools/test-scripts/svntest/svntest-update.sh
    (CLEAN_WORKING_COPY): New function, this will clean working copy.
    Use CLEAN_WORKING_COPY for apr, apr-util, httpd and svn.
    Use FORCE_UP_REV_SVN for svn's update.
    
* tools/test-scripts/svntest/svntest.sh
    Added switch to turn on/off shared and static testing. The actual change
    is only few lines, the rest of the diff is fixed indentation.

* tools/test-scripts/svntest/svntest-check-configuration.sh
    Removed a test for CVS, added a test for XARGS.

* tools/test-scripts/svntest/svntest-run.sh
    Added time printing and SVNSERVE_PORT for svnserve.

* tools/test-scripts/svntest/svntest-config.sh
    New configuration items:
    FORCE_UP_REV_SVN, this will force to update to specified revision for SVN.
    TEST_STATIC, TEST_SHARED, switches if or not to test static and shared 
    build.
    Corrected httpd's port.
    SVNSERVER_PORT, new variable.
    Removed CVS command, it isn't used anymore.
    Added XARGS command.

* tools/test-scripts/svntest/svntest-bindings-generic.sh
    Added time printing.

* tools/test-scripts/svntest/README
    Document that working copies will be cleaned off unversioned items.



git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@857683 13f79535-47bb-0310-9956-ffa450edef68

--- a/tools/test-scripts/svntest/README
+++ b/tools/test-scripts/svntest/README
@@ -28,6 +28,10 @@ Usage
    during rebuilding:
    $INST_DIR/<proj_name>, ie. with present configuration the paths are: 
    /home/YOUR_USERNAME/svn/inst/{apr-0.9,apr-util-0.9,httpd-2.0,svn}
+   
+   It will also clean off all non-versioned data from working copies of apr, 
+   apr-util, httpd and svn. Don't put anything under these directories by 
+   yourself.
 
 3) Create one or more scripts that configure Subversion in different
    ways (e.g., configure.shared, configure.static). Here's the script
