Many spelling fixes, mostly in comments (the only two that affect code are listed below).
Patch by: Martin A. Brooks <martin@hinterlands.org>

* subversion/tests/cmdline/cat_tests.py
  (cat_nonexistent_file): Renamed from cat_nonexistant_file.
  (test_list): Adjust for above.

* subversion/tests/cmdline/export_tests.py
  (export_nonexistent_file): Renamed from export_nonexistant_file.
  (test_list): Adjust for above.


git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@857934 13f79535-47bb-0310-9956-ffa450edef68

--- a/subversion/bindings/java/javahl/README
+++ b/subversion/bindings/java/javahl/README
@@ -1,6 +1,6 @@
 This Software should compile and run under win32 and linux. The 
 integration into the subversion build system has been done by
-Justin Erenkrantz for non win32 systems. The intergration for win32
+Justin Erenkrantz for non win32 systems. The integration for win32
 system will be provided later.
 
 It will produce libsvnjavahl.so or libsvnjavahl.dll (the native
