Fix typos in the svntest system.
* tools/test-scripts/svntest/svntest-config.sh
  (APR_REPO): Use correct spelling of self, instead of "ARP_REPO".
  This typo wouldn't affect anything in normal usage, but it could
  have bitten someone who used an unusual configuration.

* tools/test-scripts/svntest/README: Fix same typo.


git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@857939 13f79535-47bb-0310-9956-ffa450edef68

--- a/tools/test-scripts/svntest/README
+++ b/tools/test-scripts/svntest/README
@@ -153,7 +153,7 @@ Usage
    http://subversion.tigris.org/faq.html#ramdisk-tests for further
    information.
    
-7) Run svntest.sh to get the latest versions of ARP, APR-UTIL, HTTPPD and
+7) Run svntest.sh to get the latest versions of APR, APR-UTIL, HTTPPD and
    Subversion, build and test all the configurations. 
 
 8) If you like force rebuilding of some component, you could do:
