Fix terminology so that working copies are not called repositories. That was... confusing.
* tools/test-scripts/svntest/svntest-config.sh
  (SVN_SOURCE): Replace SVN_REPO.
  (APR_SOURCE): Replace APR_REPO.
  (APU_SOURCE): Replace APU_REPO.
  (HTTPD_SOURCE): Replace HTTPD_REPO.

* tools/test-scripts/svntest/svntest-rebuild.sh: Adjust for above.

* tools/test-scripts/svntest/svntest-check-configuration.sh: Same.

* tools/test-scripts/svntest/README: Same.


git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@857940 13f79535-47bb-0310-9956-ffa450edef68

--- a/tools/test-scripts/svntest/README
+++ b/tools/test-scripts/svntest/README
@@ -157,7 +157,7 @@ Usage
    Subversion, build and test all the configurations. 
 
 8) If you like force rebuilding of some component, you could do:
-   echo "0" > $PROJ_REPO.rb, dependencies are:
+   echo "0" > $<PROJ>_SOURCE.rb, dependencies are:
    apr-util depends on apr, and httpd depends on apr and apr-util.
    Any dependent project will be also rebuild.
    When you run this script first time, everything will be rebuilt 
