--- a/tools/test-scripts/svntest/README
+++ b/tools/test-scripts/svntest/README
@@ -17,120 +17,70 @@ Usage
    checkout corresponding repositories, and edit svntest-config.sh.
 
 2) Copy the svntest scripts from trunk/tools/test-scripts/svntest to
-   somewhere outside the repository. Then read and modify
-   svntest-config.sh to reflect your local installation. Take special
-   care about program locations, program installation locations and
-   e-mail addresses. The svn-breakage list has to be subscribed by the 
-   same address that is put to FROM variable. Otherwise report emails
-   will disappear to the black hole of the bits.
+   somewhere outside the repository.  Then read and modify
+   svntest-config.sh to reflect your local installation.  The rest of
+   these instructions assume you have done this, and that you are
+   familiar with the $TEST_ROOT and $INST_DIR locations from
+   svntest-config.sh.
 
-   Also notice that this test script will wipe out following paths
-   during rebuilding:
-   $INST_DIR/<proj_name>, ie. with present configuration the paths are: 
-   /home/YOUR_USERNAME/svn/inst/{apr-0.9,apr-util-0.9,httpd-2.0,svn}
-   
-   It will also clean off all non-versioned data from working copies of apr, 
-   apr-util, httpd and svn. Don't put anything under these directories by 
-   yourself.
+3) In $TEST_ROOT, create one or more scripts that configure Subversion
+   in different ways (e.g., configure.shared, configure.static).
+   These scripts must be set executable (chmod +x).
 
-3) Create one or more scripts that configure Subversion in different
-   ways (e.g., configure.shared, configure.static). Here's the script
-   I'm using for static builds on Solaris 7:
+   Although they live in $TEST_ROOT, these scripts will be invoked
+   from a $TEST_ROOT/obj-<projname>, e.g., $TEST_ROOT/obj-apr-0.9,
+   (for which the config script would be $TEST_ROOT/config.apr-0.9).
 
-    config.apr-0.9:
-    #!/bin/sh
-
-    "../apr-0.9/configure" \
-    "--prefix=/home/YOUR_USERNAME/svn/inst/apr-0.9" \
-    "--with-pic" \
-    "$@"
-
-
-    config.apr-util-0.9:
-    #!/bin/sh
-
-    "../apr-util-0.9/configure" \
-    "--prefix=/home/YOUR_USERNAME/svn/inst/apr-util-0.9" \
-    "--with-apr=/home/YOUR_USERNAME/svn/inst/apr-0.9" \
-    "--with-pic" \
-    "--with-dbm=db4" \
-    "--with-berkeley-db" \
-    "--with-expat=/usr" \
-    "$@"
-
-
-    config.httpd-2.0:
-    #!/bin/sh
-    
-    CURR_WD="`pwd`"
-    cd ../httpd-2.0
-
-    "./buildconf" \
-    "--with-apr=/home/YOUR_USERNAME/svn/apr-0.9" \
-    "--with-apr-util=/home/YOUR_USERNAME/svn/apr-util-0.9"
-
-    cd "$CURR_WD"
-
-    "../httpd-2.0/configure" \
-    "--prefix=/home/YOUR_USERNAME/svn/inst/httpd-2.0" \
-    "--with-apr=/home/YOUR_USERNAME/svn/inst/apr-0.9/bin/apr-config" \
-    "--with-apr-util=/home/YOUR_USERNAME/svn/inst/apr-util-0.9/bin/apu-config" \
-    "--enable-dav" \
-    "$@"
-    
-    
-    config.solaris.static (for subversion):
-    #!/bin/sh
-    env CC='gcc' \
-       "../svn/configure" \
-       "--prefix=/home/YOUR_USERNAME/svn/inst" \
-       "--with-berkeley-db=/home/YOUR_USERNAME/svn/db4" \
-       "--with-apr=/home/YOUR_USERNAME/svn/inst/apr-0.9/bin/apr-config" \
-       "--with-apr-util=/home/YOUR_USERNAME/svn/inst/apr-util-0.9/bin/apu-config" \
-       "--with-apxs=/home/YOUR_USERNAME/svn/inst/httpd-2.0/bin/apxs" \
-       "--disable-shared" \
-       "$@"
+   See the examples/ directory next to this README for some examples
+   of these config scripts.
 
    At the moment, svntest-rebuild.sh will only recognize shared and
    static build types, but you can easily change that. If you do, also
    change svntest.sh so that it tests all the different configurations.
 
-4) Tailor your $HTTPD_NAME.conf (ie. httpd-2.0.conf) to suit 
-   your needs, (easiest way to get a template for http-2.0.conf is 
-   install Apache httpd at once, and after that copy installed httpd.conf, and
-   edit it). Things to change are probably: 
+4) Tailor ${TEST_ROOT}/$HTTPD_NAME.conf (e.g., httpd-2.0.conf) as
+   necessary.  The easiest way to get a template for http-2.0.conf is
+   to install Apache httpd once, take the installed conf/httpd.conf,
+   and edit it.  Things you probably want to change are: 
 
-   i)   Listen 127.0.0.1:52080
-   ii)  LoadModule dav_svn_module     modules/mod_dav_svn.so
-   iii) User YOUR_USERNAME
-        Group YOUR_GROUPNAME
-   v)   ServerName localhost:52080
-   vi)  Add mod_dav_svn block to the $HTTPD_NAME.conf:
+      a) Listen 127.0.0.1:52080
+
+      b) LoadModule dav_svn_module     modules/mod_dav_svn.so
+
+      c) User YOUR_USERNAME
+         Group YOUR_GROUPNAME
+
+      d) ServerName localhost:52080
+
+      e) Add a mod_dav_svn block:
     
-        <IfModule mod_dav_svn.c>
-           Include conf/mod_dav_svn.conf
-        </IfModule>
+           <IfModule mod_dav_svn.c>
+              Include conf/mod_dav_svn.conf
+           </IfModule>
 
-   vii) Check and fix the content of mod_dav_svn.conf
+      f) Copy ./mod_dav_svn.conf (i.e., the one in the same directory
+         as this README) to ${TEST_ROOT}/mod_dav_svn.conf, and adjust
+         it as necessary.
 
-        The actual name of the used mod_dav_svn conf file is
-        mod_dav_${SVN_NAME}.conf, which is mod_dav_svn.conf with
-        default settings.
+         The actual name of the used mod_dav_svn conf file is
+         ${TEST_ROOT}/mod_dav_${SVN_NAME}.conf, which is
+         mod_dav_svn.conf with default settings.
 
-        If you like to run regression tests for 1.1.x or 1.2.x with
-        the same svntest setup, you have to change the name of
-        SVN_NAME variable, and you have to generate two additional
-        mod_dav_svn conf files:
+         Likwise, copy ./dav_svn.passwd to ${TEST_ROOT}/dav_svn.passwd.
+         (You shouldn't need to adjust it.)
 
-        sed 's!/svn-test-work!!' mod_dav_svn.conf > mod_dav_svn_1.2.x.conf
-        sed 's!/svn-test-work!!' mod_dav_svn.conf > mod_dav_svn_1.1.x.conf
+         If you want to run regression tests for 1.1.x or 1.2.x with
+         the same svntest setup, you have to change the SVN_NAME
+         variable, and generate two additional mod_dav_svn conf files:
+
+           sed 's!/svn-test-work!!' mod_dav_svn.conf > mod_dav_svn_1.2.x.conf
+           sed 's!/svn-test-work!!' mod_dav_svn.conf > mod_dav_svn_1.1.x.conf
         
-        and set SVN_NAME=svn_1.2.x for 1.2.x, and SVN_NAME=svn_1.1.x
-        for 1.1.x.
+         and set SVN_NAME=svn_1.2.x for 1.2.x, and SVN_NAME=svn_1.1.x
+         for 1.1.x.
 
-
-   Don't ever touch config files under $INST_DIR/$HTTPD_NAME/conf, they will be overwritten by
-   the script.
+   Don't ever touch config files under $INST_DIR/$HTTPD_NAME/conf,
+   they will be overwritten by the script.
    
 5) Make sure your environment (e.g., LD_LIBRARY_PATH) is set correctly
    to find Berkeley DB, etc.
@@ -162,6 +112,3 @@ Usage
    Any dependent project will be also rebuild.
    When you run this script first time, everything will be rebuilt 
    automatically.
-
-======================================================
-Need more detailed instructions? Use the Source, Luke!
