--- a/README
+++ b/README
@@ -1,83 +1,43 @@
-
-               Subversion, a version control system.
-               =====================================
-
-$LastChangedDate$
-
-Contents:
-
-     I. A FEW POINTERS
-    II. DOCUMENTATION
-   III. PARTICIPATING IN THE SUBVERSION COMMUNITY
-    IV. QUICKSTART GUIDE
-     V. CONVERTING FROM CVS
+Branch to implement atomic revprop modifications in libsvn_ra.  By "atomic", we
+mean: the old value (if any) of the revprop as seen by the client modifying it
+is the same as the old value the FS layer sees at the time it enacts the change.
+This feature may be used to fully resolve issue #3546 (race condition in svnsync
+locking) and to implement 'svn propedit --revprop pname pval2 --old-value=pval'.
 
 
+Planned work
+============
 
-I.    A FEW POINTERS
+* FS layer support
+  - [DONE] r955136, r955303, r955306 on trunk.
 
-      For an overview of the Subversion project, visit
+* repos layer support
+  - extend svn_repos_fs_change_rev_prop3() to wrap svn_fs_change_rev_prop2()
 
-         http://subversion.apache.org/
+* RA layer support
+  - capability:
+      Need a new libsvn_ra-level capability.  (because atomicity can't be
+      achieved with older servers, and because of planned protocol extensions)
+  - ra_local
+      Trivial.
+  - ra_svn
+      Add a 'change-rev-prop2' verb.
+  - ra_dav
+      Extend PROPPATCH syntax to provide the old value: add a <S:oldvalue/>
+      tag inside the <${propname}> tag.
+        TODO: where to document this protocol extension?
+  - unit test
+      (details?)
 
-      Once you have a Subversion client you can get the latest version
-      of the code with the command:
-
-         $ svn co http://svn.apache.org/repos/asf/subversion/trunk subversion
-
-
-
-II.   DOCUMENTATION
-
-      The main documentation is the Subversion Book - an on-line version
-      can be found at:
-      
-         http://svnbook.red-bean.com/
-
-      It is written in DocBook XML, and the sources can be found at:
-
-         http://svn.red-bean.com/svnbook/
-         
-      If you wish to build the documentation from source, read the
-      src/en/README file within the book source.
-
+* svnsync:
+  - use the new RA API to resolve the race condition in locking.
 
 
-III.  PARTICIPATING IN THE SUBVERSION COMMUNITY
+Potential work
+==============
 
-      First, read www/hacking.html!  It describes Subversion coding and
-      log message standards, as well as how to join discussion lists.
+* repos layer hooks interface
+  - pass the old value to pre-revprop-change
 
-      Talk on IRC with developers:  irc.freenode.net, channel #svn-dev.
-
-      Read the FAQ:  http://subversion.apache.org/faq.html
-
-
-
-IV.   QUICKSTART GUIDE
-
-      See the final section of the first chapter of the Subversion Book.
-
-
-
-V.    CONVERTING FROM CVS
-
-      If you're a CVS user trying to move your CVS history over to
-      Subversion, then be sure to visit the 'cvs2svn' project:
-
-         http://cvs2svn.tigris.org
-
-      You can get the latest released version of the cvs2svn converter
-      from the project downloads area:
-
-         http://cvs2svn.tigris.org/servlets/ProjectDocumentList?folderID=2976
-
-      Please note that the cvs2svn project is a *separate* project from
-      Subversion.  If you have problems with cvs2svn or are confused,
-      please email the cvs2svn project's mailing lists, not the
-      Subversion lists.
-
-      Finally, be sure to see Appendix B in the Subversion Book.  It
-      contains a very quick overview of the major differences between
-      CVS and Subversion.
-
+* svn propedit --revprop --old-value
+  (Not planned currently.)
