On the issue-2779-dev branch:  Add some testing framework changes, and some new tests, for the automatic redirection stuff.
* subversion/libsvn_client/relocate.c
  (validator_func): Check for the magic environment variable
    SVN_I_LOVE_CORRUPTED_WORKING_COPIES_SO_DISABLE_RELOCATE_VALIDATION,
    which, if set to "yes", disables the URL and UUID validation that
    svn_client_relocate() performs.

* subversion/tests/cmdline/svntest/sandbox.py
  (Sandbox.redirected_root_url): New function.

* subversion/tests/cmdline/svntest/actions.py
  (no_relocate_validation, do_relocate_validation): New functions.

* subversion/tests/cmdline/svntest/main.py
  (TestRunner.run): Enable (forcibly) relocation validation.

* subversion/tests/cmdline/redirect_tests.py
  New test script.

* subversion/tests/cmdline/README,
* subversion/tests/cmdline/davautocheck.sh
  Update httpd.conf snippet to show RedirectMatch statement.


git-svn-id: https://svn.apache.org/repos/asf/subversion/branches/issue-2779-dev@981666 13f79535-47bb-0310-9956-ffa450edef68

--- a/subversion/tests/cmdline/README
+++ b/subversion/tests/cmdline/README
@@ -83,6 +83,8 @@ paths adjusted appropriately:
      Require valid-user
    </Location>
 
+   RedirectMatch permanent ^/svn-test-work/repositories/REDIRECT-(.*)$ /svn-test-work/repositories/$1
+
 Httpd should be running on port 80.  You may also need to ensure that
 it's running as you, so it has read/write access to the repositories
 that are probably living in your Subversion working copy.  To do this,
